Wheel scrolling works after autoscroll cancellation.

This cl sends a GFS with zero velocity in |OnAutoscrollStart| to make sure
that the GFC sent in |onAutoscrollEnd| doesn't get filtered. Processing the
GFC will generate a GSE with ends the current scroll sequence.

Bug: 829794
Test: WheelScrollingWorksAfterAutoscrollCancel
Change-Id: I929e473018f3de9ecf8fafb1f7b2e8e6a9adfd2f
Reviewed-on: https://chromium-review.googlesource.com/1026454
Commit-Queue: Sahel Sharifymoghaddam <sahel@chromium.org>
Reviewed-by: David Bokan <bokan@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Timothy Dresser <tdresser@chromium.org>
Reviewed-by: Sahel Sharifymoghaddam <sahel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555217}
Former-commit-id: dd2d3effe08392fcd5277bf052c2d3ebbeaf8cd1